# blacker

./: .gitignore  LICENSE  index.html  package-lock.json
.github/workflows/: kubernetes.yaml  service-market.yaml  service-notification.yaml  service-slave.yaml
backend/: README.md  dev.secrets.sh  nginx.sh  setup.sh  skaffold.sh  skaffold.yaml
backend/classic-hunter/: env.sh  package.json  requirements.txt  tsconfig.json
backend/common/: .gitignore  package.json  publish.sh  tsconfig.json
backend/forex-hunter/: Dockerfile
backend/service-backtest/: .env.development  package.json
backend/service-engine/: .gitignore  Cargo.toml  api.py  catalog.py  instrument.py  main.py  main.rs  node.py  setup.sh  test.py
backend/service-engine/catalog/data/currency_pair/EURUSD.SIM/: 1970-01-01T00-00-00-000000000Z_1970-01-01T00-00-00-000000000Z.parquet
backend/service-engine/instruments/: btcusd.py  create-cfd-instrument.py
backend/service-engine/strategy/: users.py
backend/service-engine/venues/: prop_venue.py
backend/service-hunter/: Dockerfile  package.json  (+1 more)
backtesting/: btcusdt_1h_1y.csv  index.js  package-lock.json  sha256sum  validate.js
calculator/: crypto.js  forex.js
desktop/: index.html  nuxt.config.ts  package-lock.json  package.json
docs/: crypto.js  feed.txt
footprint/: index.js
manual/: crypto.js  forex.js  index.js
mobile/: .env.production  README.md  pubspec.yaml
mt5/: execute.py  kill.bat  log.txt  log_servicio.txt  main.py  orders.py  run.bat  setup  task-pf.ps1  task.bat  test.py
pine/: mfi.pine  rangefinish.pine  rsi.pine
(+438 files in other folders)
