# Cargo.toml (añade estas dependencias)
# [dependencies]
# tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
# sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
# chrono = { version = "0.4", features = ["serde"] }
# rand = "0.8"
# serde = { version = "1.0", features = ["derive"] }
# anyhow = "1.0"
